# haskell-bot

./: .gitignore  README.md  haskell-bot.cabal
src/: Main.hs
