cabal-version:      2.4
name:               haskell-bot
version:            0.1.0.0

author:             Dreary Lisper
maintainer:         drearylisper@gmail.com

executable haskell-bot
    main-is:          Main.hs
    ghc-options:      -threaded
    build-depends:    base ^>=4.14.3.0
                      , text
                      , unliftio
                      , discord-haskell
    hs-source-dirs:   src 
    default-language: Haskell2010
